--- a/release/src/router/www/index_style.css
+++ b/release/src/router/www/index_style.css
@@ -515,8 +515,9 @@ body {
 	margin-right:15px;
 	text-decoration: underline;
 	font-family:Lucida Console;
-	font-weight: bolder;
-	white-space: nowrap;
+	/* font-weight: bolder; */
+	white-space:nowrap;
+	color:#B7EEFF;
 }
 /*========================== router Tab =================================*/
 .r1{
@@ -528,9 +529,9 @@ body {
 	width:50px;
 	background:url(images/tag-router2.gif) 0 bottom no-repeat;
 	font-weight:bold;
-	font-family :Verdana;
-	font-size : 12px;
-	color:#000000
+	font-family:Verdana;
+	font-size:12px;
+	color:#000000;
 }
 
 .r2{
