webui: fix banner formatting to cover NL support, add ellipses to SSIDs

--- a/release/src/router/www/index_style.css
+++ b/release/src/router/www/index_style.css
@@ -511,8 +511,9 @@ body {
  	cursor:pointer;
 	line-height:19px;
 	height:19px;
+	font-size:12px;
 	margin-left:5px;
-	margin-right:15px;
+	margin-right:10px;
 	text-decoration: underline;
 	font-family:Lucida Console;
 	/* font-weight: bolder; */
